removing RiceDebugUtils, WriterOutputStream as per lattix notes.